--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7996a0">  <td>18/07/06 19:57:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginXcm()[pri:0, instance:com.xcm.Leo.cases.Login@6767c1fc]">loginXcm</td> 
-  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>18/07/06 19:57:33</td>   <td>9816</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.release()[pri:0, instance:com.xcm.Leo.cases.Login@6767c1fc]">&lt;&lt;release</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>18/08/06 15:36:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.conect()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&gt;&gt;conect</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>18/08/06 15:36:40</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.loadDriver()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&gt;&gt;loadDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>18/08/06 15:36:44</td>   <td>4398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.loginXCM()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">loginXCM</td> 
+  <td>main@1643691748</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>18/08/06 15:36:46</td>   <td>6311</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>18/08/06 15:36:47</td>   <td>7243</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeDB()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&lt;&lt;closeDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
 </table>
