--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.xcm.Leo.integration.BaseTest</td>
+<td>testBaidu</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginXCM</td>
+<td>test3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>conect</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>loadDriver</td>
@@ -35,10 +31,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>closeDB</td>
+<td>quit</td>
 <td>&nbsp;</td></tr>
 </table>
