--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92ec79">  <td>18/08/06 15:36:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.conect()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&gt;&gt;conect</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
-<tr bgcolor="92ec79">  <td>18/08/06 15:36:40</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.loadDriver()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&gt;&gt;loadDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
-<tr bgcolor="92ec79">  <td>18/08/06 15:36:44</td>   <td>4398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.loginXCM()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">loginXCM</td> 
-  <td>main@1643691748</td>   <td></td> </tr>
-<tr bgcolor="92ec79">  <td>18/08/06 15:36:46</td>   <td>6311</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
-<tr bgcolor="92ec79">  <td>18/08/06 15:36:47</td>   <td>7243</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeDB()[pri:0, instance:com.xcm.Leo.integration.BaseTest@64bfbc86]">&lt;&lt;closeDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643691748</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>18/10/18 09:52:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testBaidu.loadDriver()[pri:0, instance:testBaidu@31610302]">&gt;&gt;loadDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2142003995</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>18/10/18 09:52:19</td>   <td>3480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testBaidu.test3()[pri:0, instance:testBaidu@31610302]">test3</td> 
+  <td>main@2142003995</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>18/10/18 09:52:19</td>   <td>3520</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testBaidu.quit()[pri:0, instance:testBaidu@31610302]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2142003995</td>   <td></td> </tr>
 </table>
